--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-DB_HOST=host
-DB_USER=dbuser
-DB=dbname
-DB_PASS=dbpass
+DB_HOST=db_host
+DB_USER=db_user
+DB_ASTERISK=db_asterisk
+DB_KYC=db_kyc
+DB_PASS=db_pass
