--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "7",
     "eslint-config-next": "12.0.4"
   }
