--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^4.17.1",
     "knex": "^0.95.14",
     "next": "12.0.4",
     "pg": "^8.7.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "socket.io": "^4.4.0",
+    "socket.io-client": "^4.4.0",
+    "socketio-file-upload": "^0.7.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^4.1.0",
