--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "fullstack-next",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "PORT=5555 next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "digest-fetch": "^1.2.1",
-    "express": "^4.17.1",
+    "express": "^4.17.3",
     "knex": "^0.95.14",
     "next": "12.0.4",
     "node-fetch": "2.6.1",
