--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pg": "^8.7.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "request": "^2.88.2",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0",
     "socketio-file-upload": "^0.7.3",
