--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-DB_HOST=db_host
-DB_USER=db_user
+DB_HOST=your_host
+DB_USER=your_dbuser
 DB_ASTERISK=db_asterisk
 DB_KYC=db_kyc
 DB_PASS=db_pass
-VIDEO_DIR=your/dir/files
+VIDEO_DIR=video_dir/
+PORT=port_service
