--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "cors": "^2.8.5",
     "digest-fetch": "^1.2.1",
     "express": "^4.17.3",
+    "ffprobe": "^1.1.2",
+    "ffprobe-static": "^3.0.0",
     "knex": "^0.95.14",
     "next": "12.0.4",
     "node-fetch": "2.6.1",
