--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "socket.io-client": "^4.4.0",
     "socketio-file-upload": "^0.7.3",
     "uuid": "^8.3.2",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.4.23",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^4.1.0",
