--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ VIDEO_DIR=video_dir/
 PORT=port_service
 JWT_KEY=jwt_key
 JWT_EXPIRED=900000 <- 15 menit
+AM_XML_USERNAME=AM_XML_USERNAME
+AM_XML_PASSWORD=AM_XML_PASSWORD
